--- a/styles/style.css
+++ b/styles/style.css
@@ -146,21 +146,26 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   overflow: hidden; }
 
 * {
-  margin: 0;
   padding: 0; }
 
 html {
   font-size: 125%;
-  position: relative; }
+  background-color: #161616;
+  color: #e0e2db; }
 
 body {
-  font-family: "Lato", sans-serif; }
+  font-family: "Lato", sans-serif;
+  position: relative; }
 
-h1, h2 {
-  font-family: "Open Sans", sans-serif; }
+h1, h2, h3 {
+  font-family: "Open Sans", sans-serif;
+  margin: 0; }
 
 li {
   list-style: none; }
+
+p {
+  margin: 0; }
 
 a {
   text-decoration: none;
@@ -181,8 +186,8 @@ img {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-flow: column wrap;
-  flex-flow: column wrap; }
+  -ms-flex-direction: column;
+  flex-direction: column; }
 
 .flexRow {
   display: -webkit-box;
@@ -237,11 +242,6 @@ label[for="searchArtist"] {
   -ms-flex-direction: column;
   flex-direction: column; }
 
-.searchBar.grid {
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between; }
-
 .searchBar {
   margin-top: 2%;
   -webkit-box-pack: justify;
@@ -283,16 +283,8 @@ label[for="searchArtist"] {
     border-color: transparent;
     color: #333333; }
 
-main {
-  background-color: #161616;
-  color: #e0e2db; }
-
 .mainContainer {
   padding-bottom: 0.1%; }
-
-.infoContainer,
-.songListContainer {
-  max-height: 20%; }
 
 .mainInfoDisplay {
   -webkit-box-orient: horizontal;
@@ -323,7 +315,6 @@ main {
   margin-bottom: 2.5%; }
 
 .songList {
-  max-height: 325px;
   overflow-y: auto; }
   .songList li:nth-child(2n + 1) {
     background-color: #333333; }
@@ -385,8 +376,7 @@ main {
     display: grid;
     -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    font-size: 0.85rem;
-    max-height: 70px; }
+    font-size: 0.85rem; }
     .suggestions .grid li {
       margin-bottom: 1.5%;
       -webkit-transition: color 0.25s ease-in;
@@ -408,6 +398,8 @@ footer {
     font-size: 0.55rem; }
 
 @media (max-width: 1050px) {
+  html {
+    font-size: 100%; }
   .infoContainer, .songListContainer {
     width: 50%; }
   .trackHeading li:last-child {
